# EPITECH_TEK2_POOL

./: README.md
cpp_d01/ex00/: white_rabbit.c
cpp_d01/ex01/: Makefile  main.c  menger.c  menger.h
cpp_d01/ex02/: bitmap.h  bitmap_header.c
cpp_d06/: CMakeLists.txt
cpp_d06/ex00/: Makefile  main.cpp
cpp_d06/ex01/: Makefile  main.cpp
cpp_d06/ex02/: SickKoala.cpp
cpp_d06/ex03/: KoalaNurse.cpp  KoalaNurse.hpp  SickKoala.cpp  SickKoala.hpp
cpp_d06/ex04/: KoalaDoctor.cpp  KoalaDoctor.hpp  SickKoala.cpp
cpp_d06/ex05/: KoalaDoctor.cpp  KoalaDoctor.hpp  KoalaNurseList.hpp  SickKoala.cpp  SickKoala.hpp
cpp_d06/ex06/: Hospital.cpp  Hospital.hpp  KoalaDoctorList.cpp  KoalaDoctorList.hpp  KoalaNurse.cpp  KoalaNurse.hpp  KoalaNurseList.cpp  SickKoalaList.cpp  SickKoalaList.hpp
cpp_d06/tests/: main.cpp
cpp_d10/: CMakeLists.txt
cpp_d13/: CMakeLists.txt
cpp_d14a/: CMakeLists.txt
cpp_d17/: CMakeLists.txt
cpp_rush2/: Box.cpp  Box.hpp  CMakeLists.txt  ConveyorBelt.cpp  ConveyorBelt.hpp  ConveyorBeltRand.cpp  ConveyorBeltRand.hpp  Elf.cpp  Elf.hpp  GiftPaper.cpp  GiftPaper.hpp  IConveyorBelt.hpp  IElf.hpp  IPapaXmasElf.hpp  ITable.hpp  LittlePony.cpp  LittlePony.hpp  Main.cpp  Makefile  Object.cpp  Object.hpp  PapaXmasConveyorBelt.cpp  PapaXmasConveyorBelt.hpp  PapaXmasElf.cpp  PapaXmasElf.hpp  PapaXmasTable.cpp  PapaXmasTable.hpp  Santa.cpp  Santa.hpp  Table.cpp  Table.hpp  TableRand.cpp  TableRand.hpp  Teddy.cpp  Teddy.hpp  Toy.cpp  Toy.hpp  Wrap.cpp  Wrap.hpp
cpp_rush2/gifts/: Gift1.xml  Gift2.xml
cpp_rush3/: CMakeLists.txt  Makefile
(+308 files in other folders)
