cmake_minimum_required(VERSION 3.9)
project(cpp_d06)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp_d06
        ex00/main.cpp ex01/main.cpp ex02/SickKoala.cpp ex02/SickKoala.h ex02/main.cpp ex03/KoalaNurse.h ex03/KoalaNurse.cpp ex03/main.cpp ex04/main.cpp ex04/KoalaDoctor.cpp ex04/KoalaDoctor.h ex05/SickKoalaList.cpp ex05/SickKoalaList.h ex05/KoalaNurseList.cpp ex05/KoalaNurseList.h ex05/KoalaDoctorList.cpp ex05/KoalaDoctorList.h ex01/test.cpp ex00/test.cpp ex00/test.h ex06/Hospital.cpp ex06/Hospital.h)
